--- a/test.html
+++ b/test.html
@@ -4,10 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>Test</title>
 </head>
 <body>
-  <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Itaque perspiciatis id, sequi asperiores qui aliquam eos vel aut atque, fugiat autem ab deserunt cupiditate ipsam libero voluptates earum. Voluptate, non.</p>
+  <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
 </body>
 <script src="src/script.js"/>
 </html>
