--- a/test.html
+++ b/test.html
@@ -7,7 +7,7 @@
   <title>Test</title>
 </head>
 <body>
-  <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+  <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Itaque perspiciatis id, sequi asperiores qui aliquam eos vel aut atque, fugiat autem ab deserunt cupiditate ipsam libero voluptates earum. Voluptate, non.</p>
 </body>
 <script src="src/script.js"/>
 </html>
